// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IBJJF System > Black 1`] = `
[
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#000000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 17,
      "maxStripes": 6,
      "minStripes": 0,
      "name": "Black",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#990000",
      "professorBorderColor": "#CCCCCC",
      "professorPatchColor": "#FFFFFF",
      "sortOrder": 170,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#CCCCCC",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patchBorder": "#CCCCCC",
    "patchColor": "#990000",
    "professorBorder": "#CCCCCC",
    "professorPatch": "#FFFFFF",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#000000",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#000000",
    "s11l1Color": "#000000",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#000000",
    "s12l1Color": "#000000",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#000000",
    "s13l1Color": "#000000",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#000000",
    "s1l1Color": "#000000",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#000000",
    "s2l1Color": "#000000",
    "s2l2aColor": "#000000",
    "s2l2bColor": "#000000",
    "s2l3Color": "#000000",
    "s3l1Color": "#000000",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#000000",
    "s4l1Color": "#000000",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#000000",
    "s5l1Color": "#000000",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#000000",
    "s6l1Color": "#000000",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#000000",
    "s7l1Color": "#000000",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#000000",
    "s8l1Color": "#000000",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#000000",
    "s9l1Color": "#000000",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#000000",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Blue 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#0099CC",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 14,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Blue",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 140,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#0099CC",
    "s10l2aColor": "#0099CC",
    "s10l2bColor": "#0099CC",
    "s10l3Color": "#0099CC",
    "s11l1Color": "#0099CC",
    "s11l2aColor": "#0099CC",
    "s11l2bColor": "#0099CC",
    "s11l3Color": "#0099CC",
    "s12l1Color": "#0099CC",
    "s12l2aColor": "#0099CC",
    "s12l2bColor": "#0099CC",
    "s12l3Color": "#0099CC",
    "s13l1Color": "#0099CC",
    "s13l2aColor": "#0099CC",
    "s13l2bColor": "#0099CC",
    "s13l3Color": "#0099CC",
    "s1l1Color": "#0099CC",
    "s1l2aColor": "#0099CC",
    "s1l2bColor": "#0099CC",
    "s1l3Color": "#0099CC",
    "s2l1Color": "#0099CC",
    "s2l2aColor": "#0099CC",
    "s2l2bColor": "#0099CC",
    "s2l3Color": "#0099CC",
    "s3l1Color": "#0099CC",
    "s3l2aColor": "#0099CC",
    "s3l2bColor": "#0099CC",
    "s3l3Color": "#0099CC",
    "s4l1Color": "#0099CC",
    "s4l2aColor": "#0099CC",
    "s4l2bColor": "#0099CC",
    "s4l3Color": "#0099CC",
    "s5l1Color": "#0099CC",
    "s5l2aColor": "#0099CC",
    "s5l2bColor": "#0099CC",
    "s5l3Color": "#0099CC",
    "s6l1Color": "#0099CC",
    "s6l2aColor": "#0099CC",
    "s6l2bColor": "#0099CC",
    "s6l3Color": "#0099CC",
    "s7l1Color": "#0099CC",
    "s7l2aColor": "#0099CC",
    "s7l2bColor": "#0099CC",
    "s7l3Color": "#0099CC",
    "s8l1Color": "#0099CC",
    "s8l2aColor": "#0099CC",
    "s8l2bColor": "#0099CC",
    "s8l3Color": "#0099CC",
    "s9l1Color": "#0099CC",
    "s9l2aColor": "#0099CC",
    "s9l2bColor": "#0099CC",
    "s9l3Color": "#0099CC",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Brown 1`] = `
[
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#663300",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 16,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Brown",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 160,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#CCCCCC",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#CCCCCC",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#663300",
    "s10l2aColor": "#663300",
    "s10l2bColor": "#663300",
    "s10l3Color": "#663300",
    "s11l1Color": "#663300",
    "s11l2aColor": "#663300",
    "s11l2bColor": "#663300",
    "s11l3Color": "#663300",
    "s12l1Color": "#663300",
    "s12l2aColor": "#663300",
    "s12l2bColor": "#663300",
    "s12l3Color": "#663300",
    "s13l1Color": "#663300",
    "s13l2aColor": "#663300",
    "s13l2bColor": "#663300",
    "s13l3Color": "#663300",
    "s1l1Color": "#663300",
    "s1l2aColor": "#663300",
    "s1l2bColor": "#663300",
    "s1l3Color": "#663300",
    "s2l1Color": "#663300",
    "s2l2aColor": "#663300",
    "s2l2bColor": "#663300",
    "s2l3Color": "#663300",
    "s3l1Color": "#663300",
    "s3l2aColor": "#663300",
    "s3l2bColor": "#663300",
    "s3l3Color": "#663300",
    "s4l1Color": "#663300",
    "s4l2aColor": "#663300",
    "s4l2bColor": "#663300",
    "s4l3Color": "#663300",
    "s5l1Color": "#663300",
    "s5l2aColor": "#663300",
    "s5l2bColor": "#663300",
    "s5l3Color": "#663300",
    "s6l1Color": "#663300",
    "s6l2aColor": "#663300",
    "s6l2bColor": "#663300",
    "s6l3Color": "#663300",
    "s7l1Color": "#663300",
    "s7l2aColor": "#663300",
    "s7l2bColor": "#663300",
    "s7l3Color": "#663300",
    "s8l1Color": "#663300",
    "s8l2aColor": "#663300",
    "s8l2bColor": "#663300",
    "s8l3Color": "#663300",
    "s9l1Color": "#663300",
    "s9l2aColor": "#663300",
    "s9l2bColor": "#663300",
    "s9l3Color": "#663300",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Gray 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 3,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 30,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#999999",
    "s10l2aColor": "#999999",
    "s10l2bColor": "#999999",
    "s10l3Color": "#999999",
    "s11l1Color": "#999999",
    "s11l2aColor": "#999999",
    "s11l2bColor": "#999999",
    "s11l3Color": "#999999",
    "s12l1Color": "#999999",
    "s12l2aColor": "#999999",
    "s12l2bColor": "#999999",
    "s12l3Color": "#999999",
    "s13l1Color": "#999999",
    "s13l2aColor": "#999999",
    "s13l2bColor": "#999999",
    "s13l3Color": "#999999",
    "s1l1Color": "#999999",
    "s1l2aColor": "#999999",
    "s1l2bColor": "#999999",
    "s1l3Color": "#999999",
    "s2l1Color": "#999999",
    "s2l2aColor": "#999999",
    "s2l2bColor": "#999999",
    "s2l3Color": "#999999",
    "s3l1Color": "#999999",
    "s3l2aColor": "#999999",
    "s3l2bColor": "#999999",
    "s3l3Color": "#999999",
    "s4l1Color": "#999999",
    "s4l2aColor": "#999999",
    "s4l2bColor": "#999999",
    "s4l3Color": "#999999",
    "s5l1Color": "#999999",
    "s5l2aColor": "#999999",
    "s5l2bColor": "#999999",
    "s5l3Color": "#999999",
    "s6l1Color": "#999999",
    "s6l2aColor": "#999999",
    "s6l2bColor": "#999999",
    "s6l3Color": "#999999",
    "s7l1Color": "#999999",
    "s7l2aColor": "#999999",
    "s7l2bColor": "#999999",
    "s7l3Color": "#999999",
    "s8l1Color": "#999999",
    "s8l2aColor": "#999999",
    "s8l2bColor": "#999999",
    "s8l3Color": "#999999",
    "s9l1Color": "#999999",
    "s9l2aColor": "#999999",
    "s9l2bColor": "#999999",
    "s9l3Color": "#999999",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Gray/Black 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#000000",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 4,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 40,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#999999",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#999999",
    "s11l1Color": "#999999",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#999999",
    "s12l1Color": "#999999",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#999999",
    "s13l1Color": "#999999",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#999999",
    "s1l1Color": "#999999",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#999999",
    "s2l1Color": "#999999",
    "s2l2aColor": "#000000",
    "s2l2bColor": "#000000",
    "s2l3Color": "#999999",
    "s3l1Color": "#999999",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#999999",
    "s4l1Color": "#999999",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#999999",
    "s5l1Color": "#999999",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#999999",
    "s6l1Color": "#999999",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#999999",
    "s7l1Color": "#999999",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#999999",
    "s8l1Color": "#999999",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#999999",
    "s9l1Color": "#999999",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#999999",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Gray/White 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#FFFFFF",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 2,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 20,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#999999",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#999999",
    "s11l1Color": "#999999",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#999999",
    "s12l1Color": "#999999",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#999999",
    "s13l1Color": "#999999",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#999999",
    "s1l1Color": "#999999",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#FFFFFF",
    "s1l3Color": "#999999",
    "s2l1Color": "#999999",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#999999",
    "s3l1Color": "#999999",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#999999",
    "s4l1Color": "#999999",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#999999",
    "s5l1Color": "#999999",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#999999",
    "s6l1Color": "#999999",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#999999",
    "s7l1Color": "#999999",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#999999",
    "s8l1Color": "#999999",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#999999",
    "s9l1Color": "#999999",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#999999",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Green 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 12,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 120,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#006633",
    "s10l2aColor": "#006633",
    "s10l2bColor": "#006633",
    "s10l3Color": "#006633",
    "s11l1Color": "#006633",
    "s11l2aColor": "#006633",
    "s11l2bColor": "#006633",
    "s11l3Color": "#006633",
    "s12l1Color": "#006633",
    "s12l2aColor": "#006633",
    "s12l2bColor": "#006633",
    "s12l3Color": "#006633",
    "s13l1Color": "#006633",
    "s13l2aColor": "#006633",
    "s13l2bColor": "#006633",
    "s13l3Color": "#006633",
    "s1l1Color": "#006633",
    "s1l2aColor": "#006633",
    "s1l2bColor": "#006633",
    "s1l3Color": "#006633",
    "s2l1Color": "#006633",
    "s2l2aColor": "#006633",
    "s2l2bColor": "#006633",
    "s2l3Color": "#006633",
    "s3l1Color": "#006633",
    "s3l2aColor": "#006633",
    "s3l2bColor": "#006633",
    "s3l3Color": "#006633",
    "s4l1Color": "#006633",
    "s4l2aColor": "#006633",
    "s4l2bColor": "#006633",
    "s4l3Color": "#006633",
    "s5l1Color": "#006633",
    "s5l2aColor": "#006633",
    "s5l2bColor": "#006633",
    "s5l3Color": "#006633",
    "s6l1Color": "#006633",
    "s6l2aColor": "#006633",
    "s6l2bColor": "#006633",
    "s6l3Color": "#006633",
    "s7l1Color": "#006633",
    "s7l2aColor": "#006633",
    "s7l2bColor": "#006633",
    "s7l3Color": "#006633",
    "s8l1Color": "#006633",
    "s8l2aColor": "#006633",
    "s8l2bColor": "#006633",
    "s8l3Color": "#006633",
    "s9l1Color": "#006633",
    "s9l2aColor": "#006633",
    "s9l2bColor": "#006633",
    "s9l3Color": "#006633",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Green/Black 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "#000000",
      "color3": "#006633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 13,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 130,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#006633",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#006633",
    "s11l1Color": "#006633",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#006633",
    "s12l1Color": "#006633",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#006633",
    "s13l1Color": "#006633",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#006633",
    "s1l1Color": "#006633",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#006633",
    "s2l1Color": "#006633",
    "s2l2aColor": "#000000",
    "s2l2bColor": "#000000",
    "s2l3Color": "#006633",
    "s3l1Color": "#006633",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#006633",
    "s4l1Color": "#006633",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#006633",
    "s5l1Color": "#006633",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#006633",
    "s6l1Color": "#006633",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#006633",
    "s7l1Color": "#006633",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#006633",
    "s8l1Color": "#006633",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#006633",
    "s9l1Color": "#006633",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#006633",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Green/White 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "#FFFFFF",
      "color3": "#006633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 11,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 110,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#006633",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#006633",
    "s11l1Color": "#006633",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#006633",
    "s12l1Color": "#006633",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#006633",
    "s13l1Color": "#006633",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#006633",
    "s1l1Color": "#006633",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#FFFFFF",
    "s1l3Color": "#006633",
    "s2l1Color": "#006633",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#006633",
    "s3l1Color": "#006633",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#006633",
    "s4l1Color": "#006633",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#006633",
    "s5l1Color": "#006633",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#006633",
    "s6l1Color": "#006633",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#006633",
    "s7l1Color": "#006633",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#006633",
    "s8l1Color": "#006633",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#006633",
    "s9l1Color": "#006633",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#006633",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > JSON should match 1`] = `
BeltSystem {
  "belts": [
    {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 1,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 10,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#FFFFFF",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 2,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 20,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 3,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 30,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#434244",
      "color1": "#999999",
      "color2": "#000000",
      "color3": "#999999",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 4,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Gray/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 40,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "#FFFFFF",
      "color3": "#FFCC00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 5,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 50,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 6,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 60,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "#000000",
      "color3": "#FFCC00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 7,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 70,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#FFFFFF",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 8,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 80,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 9,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 90,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#000000",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 10,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 100,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "#FFFFFF",
      "color3": "#006633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 11,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 110,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 12,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 120,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#434244",
      "color1": "#006633",
      "color2": "#000000",
      "color3": "#006633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 13,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Green/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 130,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Striped",
    },
    {
      "borderColor": "#434244",
      "color1": "#0099CC",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 14,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Blue",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 140,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#434244",
      "color1": "#993399",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 15,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Purple",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 150,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#CCCCCC",
      "color1": "#663300",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 16,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Brown",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 160,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#CCCCCC",
      "color1": "#000000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 17,
      "maxStripes": 6,
      "minStripes": 0,
      "name": "Black",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#990000",
      "professorBorderColor": "#CCCCCC",
      "professorPatchColor": "#FFFFFF",
      "sortOrder": 170,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "type": "Solid",
    },
    {
      "borderColor": "#CCCCCC",
      "color1": "#990000",
      "color2": "#000000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 18,
      "maxStripes": 7,
      "minStripes": 7,
      "name": "Red/Black",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#CCCCCC",
      "professorPatchColor": "#999999",
      "sortOrder": 180,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "type": "Coral",
    },
    {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#990000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 19,
      "maxStripes": 8,
      "minStripes": 8,
      "name": "Red/White",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#999999",
      "sortOrder": 190,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "type": "Coral",
    },
    {
      "borderColor": "#434244",
      "color1": "#990000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 20,
      "maxStripes": 10,
      "minStripes": 9,
      "name": "Red",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#CC9900",
      "sortOrder": 200,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "type": "Solid",
    },
  ],
  "colors": [
    {
      "hex": "#FFFFFF",
      "name": "White",
    },
    {
      "hex": "#999999",
      "name": "Gray",
    },
    {
      "hex": "#000000",
      "name": "Black",
    },
    {
      "hex": "#FFCC00",
      "name": "Yellow",
    },
    {
      "hex": "#CC6633",
      "name": "Orange",
    },
    {
      "hex": "#006633",
      "name": "Green",
    },
    {
      "hex": "#0099CC",
      "name": "Blue",
    },
    {
      "hex": "#993399",
      "name": "Purple",
    },
    {
      "hex": "#663300",
      "name": "Brown",
    },
    {
      "hex": "#990000",
      "name": "Red",
    },
    {
      "hex": "#CC9900",
      "name": "Gold",
    },
    {
      "hex": "#434244",
      "name": "DarkBorder",
    },
    {
      "hex": "#CCCCCC",
      "name": "LightBorder",
    },
  ],
  "name": undefined,
  "refreshInterval": 0,
  "title": "IBJJF",
  "transitionCSS": "",
}
`;

exports[`IBJJF System > Orange 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 9,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 90,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#CC6633",
    "s10l2aColor": "#CC6633",
    "s10l2bColor": "#CC6633",
    "s10l3Color": "#CC6633",
    "s11l1Color": "#CC6633",
    "s11l2aColor": "#CC6633",
    "s11l2bColor": "#CC6633",
    "s11l3Color": "#CC6633",
    "s12l1Color": "#CC6633",
    "s12l2aColor": "#CC6633",
    "s12l2bColor": "#CC6633",
    "s12l3Color": "#CC6633",
    "s13l1Color": "#CC6633",
    "s13l2aColor": "#CC6633",
    "s13l2bColor": "#CC6633",
    "s13l3Color": "#CC6633",
    "s1l1Color": "#CC6633",
    "s1l2aColor": "#CC6633",
    "s1l2bColor": "#CC6633",
    "s1l3Color": "#CC6633",
    "s2l1Color": "#CC6633",
    "s2l2aColor": "#CC6633",
    "s2l2bColor": "#CC6633",
    "s2l3Color": "#CC6633",
    "s3l1Color": "#CC6633",
    "s3l2aColor": "#CC6633",
    "s3l2bColor": "#CC6633",
    "s3l3Color": "#CC6633",
    "s4l1Color": "#CC6633",
    "s4l2aColor": "#CC6633",
    "s4l2bColor": "#CC6633",
    "s4l3Color": "#CC6633",
    "s5l1Color": "#CC6633",
    "s5l2aColor": "#CC6633",
    "s5l2bColor": "#CC6633",
    "s5l3Color": "#CC6633",
    "s6l1Color": "#CC6633",
    "s6l2aColor": "#CC6633",
    "s6l2bColor": "#CC6633",
    "s6l3Color": "#CC6633",
    "s7l1Color": "#CC6633",
    "s7l2aColor": "#CC6633",
    "s7l2bColor": "#CC6633",
    "s7l3Color": "#CC6633",
    "s8l1Color": "#CC6633",
    "s8l2aColor": "#CC6633",
    "s8l2bColor": "#CC6633",
    "s8l3Color": "#CC6633",
    "s9l1Color": "#CC6633",
    "s9l2aColor": "#CC6633",
    "s9l2bColor": "#CC6633",
    "s9l3Color": "#CC6633",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Orange/Black 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#000000",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 10,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 100,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#CC6633",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#CC6633",
    "s11l1Color": "#CC6633",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#CC6633",
    "s12l1Color": "#CC6633",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#CC6633",
    "s13l1Color": "#CC6633",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#CC6633",
    "s1l1Color": "#CC6633",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#CC6633",
    "s2l1Color": "#CC6633",
    "s2l2aColor": "#000000",
    "s2l2bColor": "#000000",
    "s2l3Color": "#CC6633",
    "s3l1Color": "#CC6633",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#CC6633",
    "s4l1Color": "#CC6633",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#CC6633",
    "s5l1Color": "#CC6633",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#CC6633",
    "s6l1Color": "#CC6633",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#CC6633",
    "s7l1Color": "#CC6633",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#CC6633",
    "s8l1Color": "#CC6633",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#CC6633",
    "s9l1Color": "#CC6633",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#CC6633",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Orange/White 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#CC6633",
      "color2": "#FFFFFF",
      "color3": "#CC6633",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 8,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Orange/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 80,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#CC6633",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#CC6633",
    "s11l1Color": "#CC6633",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#CC6633",
    "s12l1Color": "#CC6633",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#CC6633",
    "s13l1Color": "#CC6633",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#CC6633",
    "s1l1Color": "#CC6633",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#FFFFFF",
    "s1l3Color": "#CC6633",
    "s2l1Color": "#CC6633",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#CC6633",
    "s3l1Color": "#CC6633",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#CC6633",
    "s4l1Color": "#CC6633",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#CC6633",
    "s5l1Color": "#CC6633",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#CC6633",
    "s6l1Color": "#CC6633",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#CC6633",
    "s7l1Color": "#CC6633",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#CC6633",
    "s8l1Color": "#CC6633",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#CC6633",
    "s9l1Color": "#CC6633",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#CC6633",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Purple 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#993399",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 15,
      "maxStripes": 4,
      "minStripes": 0,
      "name": "Purple",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 150,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#993399",
    "s10l2aColor": "#993399",
    "s10l2bColor": "#993399",
    "s10l3Color": "#993399",
    "s11l1Color": "#993399",
    "s11l2aColor": "#993399",
    "s11l2bColor": "#993399",
    "s11l3Color": "#993399",
    "s12l1Color": "#993399",
    "s12l2aColor": "#993399",
    "s12l2bColor": "#993399",
    "s12l3Color": "#993399",
    "s13l1Color": "#993399",
    "s13l2aColor": "#993399",
    "s13l2bColor": "#993399",
    "s13l3Color": "#993399",
    "s1l1Color": "#993399",
    "s1l2aColor": "#993399",
    "s1l2bColor": "#993399",
    "s1l3Color": "#993399",
    "s2l1Color": "#993399",
    "s2l2aColor": "#993399",
    "s2l2bColor": "#993399",
    "s2l3Color": "#993399",
    "s3l1Color": "#993399",
    "s3l2aColor": "#993399",
    "s3l2bColor": "#993399",
    "s3l3Color": "#993399",
    "s4l1Color": "#993399",
    "s4l2aColor": "#993399",
    "s4l2bColor": "#993399",
    "s4l3Color": "#993399",
    "s5l1Color": "#993399",
    "s5l2aColor": "#993399",
    "s5l2bColor": "#993399",
    "s5l3Color": "#993399",
    "s6l1Color": "#993399",
    "s6l2aColor": "#993399",
    "s6l2bColor": "#993399",
    "s6l3Color": "#993399",
    "s7l1Color": "#993399",
    "s7l2aColor": "#993399",
    "s7l2bColor": "#993399",
    "s7l3Color": "#993399",
    "s8l1Color": "#993399",
    "s8l2aColor": "#993399",
    "s8l2bColor": "#993399",
    "s8l3Color": "#993399",
    "s9l1Color": "#993399",
    "s9l2aColor": "#993399",
    "s9l2bColor": "#993399",
    "s9l3Color": "#993399",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Red 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#990000",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 20,
      "maxStripes": 10,
      "minStripes": 9,
      "name": "Red",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#CC9900",
      "sortOrder": 200,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#FFFFFF",
    "professorBorder": "#434244",
    "professorPatch": "#CC9900",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#990000",
    "s10l2aColor": "#990000",
    "s10l2bColor": "#990000",
    "s10l3Color": "#990000",
    "s11l1Color": "#990000",
    "s11l2aColor": "#990000",
    "s11l2bColor": "#990000",
    "s11l3Color": "#990000",
    "s12l1Color": "#990000",
    "s12l2aColor": "#990000",
    "s12l2bColor": "#990000",
    "s12l3Color": "#990000",
    "s13l1Color": "#990000",
    "s13l2aColor": "#990000",
    "s13l2bColor": "#990000",
    "s13l3Color": "#990000",
    "s1l1Color": "#990000",
    "s1l2aColor": "#990000",
    "s1l2bColor": "#990000",
    "s1l3Color": "#990000",
    "s2l1Color": "#990000",
    "s2l2aColor": "#990000",
    "s2l2bColor": "#990000",
    "s2l3Color": "#990000",
    "s3l1Color": "#990000",
    "s3l2aColor": "#990000",
    "s3l2bColor": "#990000",
    "s3l3Color": "#990000",
    "s4l1Color": "#990000",
    "s4l2aColor": "#990000",
    "s4l2bColor": "#990000",
    "s4l3Color": "#990000",
    "s5l1Color": "#990000",
    "s5l2aColor": "#990000",
    "s5l2bColor": "#990000",
    "s5l3Color": "#990000",
    "s6l1Color": "#990000",
    "s6l2aColor": "#990000",
    "s6l2bColor": "#990000",
    "s6l3Color": "#990000",
    "s7l1Color": "#990000",
    "s7l2aColor": "#990000",
    "s7l2bColor": "#990000",
    "s7l3Color": "#990000",
    "s8l1Color": "#990000",
    "s8l2aColor": "#990000",
    "s8l2bColor": "#990000",
    "s8l3Color": "#990000",
    "s9l1Color": "#990000",
    "s9l2aColor": "#990000",
    "s9l2bColor": "#990000",
    "s9l3Color": "#990000",
    "stripeColor1": "#990000",
    "stripeColor10": "#990000",
    "stripeColor2": "#990000",
    "stripeColor3": "#990000",
    "stripeColor4": "#990000",
    "stripeColor5": "#990000",
    "stripeColor6": "#990000",
    "stripeColor7": "#990000",
    "stripeColor8": "#990000",
    "stripeColor9": "#990000",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Red/Black 1`] = `
[
  {
    "belt": {
      "borderColor": "#CCCCCC",
      "color1": "#990000",
      "color2": "#000000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 18,
      "maxStripes": 7,
      "minStripes": 7,
      "name": "Red/Black",
      "patchBorderColor": "#CCCCCC",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#CCCCCC",
      "professorPatchColor": "#999999",
      "sortOrder": 180,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Coral",
    },
    "borderColor": "#CCCCCC",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patchBorder": "#CCCCCC",
    "patchColor": "#FFFFFF",
    "professorBorder": "#CCCCCC",
    "professorPatch": "#999999",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#000000",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#000000",
    "s11l1Color": "#990000",
    "s11l2aColor": "#990000",
    "s11l2bColor": "#990000",
    "s11l3Color": "#990000",
    "s12l1Color": "#000000",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#000000",
    "s13l1Color": "#990000",
    "s13l2aColor": "#990000",
    "s13l2bColor": "#990000",
    "s13l3Color": "#990000",
    "s1l1Color": "#000000",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#000000",
    "s2l1Color": "#990000",
    "s2l2aColor": "#990000",
    "s2l2bColor": "#990000",
    "s2l3Color": "#990000",
    "s3l1Color": "#990000",
    "s3l2aColor": "#990000",
    "s3l2bColor": "#990000",
    "s3l3Color": "#990000",
    "s4l1Color": "#000000",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#000000",
    "s5l1Color": "#000000",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#000000",
    "s6l1Color": "#990000",
    "s6l2aColor": "#990000",
    "s6l2bColor": "#990000",
    "s6l3Color": "#990000",
    "s7l1Color": "#990000",
    "s7l2aColor": "#990000",
    "s7l2bColor": "#990000",
    "s7l3Color": "#990000",
    "s8l1Color": "#990000",
    "s8l2aColor": "#990000",
    "s8l2bColor": "#990000",
    "s8l3Color": "#990000",
    "s9l1Color": "#000000",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#000000",
    "stripeColor1": "#990000",
    "stripeColor10": "#990000",
    "stripeColor2": "#990000",
    "stripeColor3": "#990000",
    "stripeColor4": "#990000",
    "stripeColor5": "#990000",
    "stripeColor6": "#990000",
    "stripeColor7": "#990000",
    "stripeColor8": "#990000",
    "stripeColor9": "#990000",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Red/White 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "#990000",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": true,
      "id": 19,
      "maxStripes": 8,
      "minStripes": 8,
      "name": "Red/White",
      "patchBorderColor": "#434244",
      "patchColor": "#FFFFFF",
      "professorBorderColor": "#434244",
      "professorPatchColor": "#999999",
      "sortOrder": 190,
      "stripeColor": "#990000",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Coral",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": true,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#FFFFFF",
    "professorBorder": "#434244",
    "professorPatch": "#999999",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#990000",
    "s10l2aColor": "#990000",
    "s10l2bColor": "#990000",
    "s10l3Color": "#990000",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#FFFFFF",
    "s12l1Color": "#990000",
    "s12l2aColor": "#990000",
    "s12l2bColor": "#990000",
    "s12l3Color": "#990000",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#FFFFFF",
    "s1l1Color": "#990000",
    "s1l2aColor": "#990000",
    "s1l2bColor": "#990000",
    "s1l3Color": "#990000",
    "s2l1Color": "#FFFFFF",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#FFFFFF",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#FFFFFF",
    "s4l1Color": "#990000",
    "s4l2aColor": "#990000",
    "s4l2bColor": "#990000",
    "s4l3Color": "#990000",
    "s5l1Color": "#990000",
    "s5l2aColor": "#990000",
    "s5l2bColor": "#990000",
    "s5l3Color": "#990000",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#FFFFFF",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#FFFFFF",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#FFFFFF",
    "s9l1Color": "#990000",
    "s9l2aColor": "#990000",
    "s9l2bColor": "#990000",
    "s9l3Color": "#990000",
    "stripeColor1": "#990000",
    "stripeColor10": "#990000",
    "stripeColor2": "#990000",
    "stripeColor3": "#990000",
    "stripeColor4": "#990000",
    "stripeColor5": "#990000",
    "stripeColor6": "#990000",
    "stripeColor7": "#990000",
    "stripeColor8": "#990000",
    "stripeColor9": "#990000",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > White 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFFFFF",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 1,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 10,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFFFFF",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#FFFFFF",
    "s11l1Color": "#FFFFFF",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#FFFFFF",
    "s12l1Color": "#FFFFFF",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#FFFFFF",
    "s13l1Color": "#FFFFFF",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#FFFFFF",
    "s1l1Color": "#FFFFFF",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#FFFFFF",
    "s1l3Color": "#FFFFFF",
    "s2l1Color": "#FFFFFF",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#FFFFFF",
    "s3l1Color": "#FFFFFF",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#FFFFFF",
    "s4l1Color": "#FFFFFF",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#FFFFFF",
    "s5l1Color": "#FFFFFF",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#FFFFFF",
    "s6l1Color": "#FFFFFF",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#FFFFFF",
    "s7l1Color": "#FFFFFF",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#FFFFFF",
    "s8l1Color": "#FFFFFF",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#FFFFFF",
    "s9l1Color": "#FFFFFF",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#FFFFFF",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Yellow 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "",
      "color3": "",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 6,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 60,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Solid",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFCC00",
    "s10l2aColor": "#FFCC00",
    "s10l2bColor": "#FFCC00",
    "s10l3Color": "#FFCC00",
    "s11l1Color": "#FFCC00",
    "s11l2aColor": "#FFCC00",
    "s11l2bColor": "#FFCC00",
    "s11l3Color": "#FFCC00",
    "s12l1Color": "#FFCC00",
    "s12l2aColor": "#FFCC00",
    "s12l2bColor": "#FFCC00",
    "s12l3Color": "#FFCC00",
    "s13l1Color": "#FFCC00",
    "s13l2aColor": "#FFCC00",
    "s13l2bColor": "#FFCC00",
    "s13l3Color": "#FFCC00",
    "s1l1Color": "#FFCC00",
    "s1l2aColor": "#FFCC00",
    "s1l2bColor": "#FFCC00",
    "s1l3Color": "#FFCC00",
    "s2l1Color": "#FFCC00",
    "s2l2aColor": "#FFCC00",
    "s2l2bColor": "#FFCC00",
    "s2l3Color": "#FFCC00",
    "s3l1Color": "#FFCC00",
    "s3l2aColor": "#FFCC00",
    "s3l2bColor": "#FFCC00",
    "s3l3Color": "#FFCC00",
    "s4l1Color": "#FFCC00",
    "s4l2aColor": "#FFCC00",
    "s4l2bColor": "#FFCC00",
    "s4l3Color": "#FFCC00",
    "s5l1Color": "#FFCC00",
    "s5l2aColor": "#FFCC00",
    "s5l2bColor": "#FFCC00",
    "s5l3Color": "#FFCC00",
    "s6l1Color": "#FFCC00",
    "s6l2aColor": "#FFCC00",
    "s6l2bColor": "#FFCC00",
    "s6l3Color": "#FFCC00",
    "s7l1Color": "#FFCC00",
    "s7l2aColor": "#FFCC00",
    "s7l2bColor": "#FFCC00",
    "s7l3Color": "#FFCC00",
    "s8l1Color": "#FFCC00",
    "s8l2aColor": "#FFCC00",
    "s8l2bColor": "#FFCC00",
    "s8l3Color": "#FFCC00",
    "s9l1Color": "#FFCC00",
    "s9l2aColor": "#FFCC00",
    "s9l2bColor": "#FFCC00",
    "s9l3Color": "#FFCC00",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Yellow/Black 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "#000000",
      "color3": "#FFCC00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 7,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow/Black",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 70,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFCC00",
    "s10l2aColor": "#000000",
    "s10l2bColor": "#000000",
    "s10l3Color": "#FFCC00",
    "s11l1Color": "#FFCC00",
    "s11l2aColor": "#000000",
    "s11l2bColor": "#000000",
    "s11l3Color": "#FFCC00",
    "s12l1Color": "#FFCC00",
    "s12l2aColor": "#000000",
    "s12l2bColor": "#000000",
    "s12l3Color": "#FFCC00",
    "s13l1Color": "#FFCC00",
    "s13l2aColor": "#000000",
    "s13l2bColor": "#000000",
    "s13l3Color": "#FFCC00",
    "s1l1Color": "#FFCC00",
    "s1l2aColor": "#000000",
    "s1l2bColor": "#000000",
    "s1l3Color": "#FFCC00",
    "s2l1Color": "#FFCC00",
    "s2l2aColor": "#000000",
    "s2l2bColor": "#000000",
    "s2l3Color": "#FFCC00",
    "s3l1Color": "#FFCC00",
    "s3l2aColor": "#000000",
    "s3l2bColor": "#000000",
    "s3l3Color": "#FFCC00",
    "s4l1Color": "#FFCC00",
    "s4l2aColor": "#000000",
    "s4l2bColor": "#000000",
    "s4l3Color": "#FFCC00",
    "s5l1Color": "#FFCC00",
    "s5l2aColor": "#000000",
    "s5l2bColor": "#000000",
    "s5l3Color": "#FFCC00",
    "s6l1Color": "#FFCC00",
    "s6l2aColor": "#000000",
    "s6l2bColor": "#000000",
    "s6l3Color": "#FFCC00",
    "s7l1Color": "#FFCC00",
    "s7l2aColor": "#000000",
    "s7l2bColor": "#000000",
    "s7l3Color": "#FFCC00",
    "s8l1Color": "#FFCC00",
    "s8l2aColor": "#000000",
    "s8l2bColor": "#000000",
    "s8l3Color": "#FFCC00",
    "s9l1Color": "#FFCC00",
    "s9l2aColor": "#000000",
    "s9l2bColor": "#000000",
    "s9l3Color": "#FFCC00",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;

exports[`IBJJF System > Yellow/White 1`] = `
[
  {
    "belt": {
      "borderColor": "#434244",
      "color1": "#FFCC00",
      "color2": "#FFFFFF",
      "color3": "#FFCC00",
      "hasPatch": true,
      "hasProfessorPatch": false,
      "id": 5,
      "maxStripes": 3,
      "minStripes": 0,
      "name": "Yellow/White",
      "patchBorderColor": "#434244",
      "patchColor": "#000000",
      "professorBorderColor": "",
      "professorPatchColor": "",
      "sortOrder": 50,
      "stripeColor": "#FFFFFF",
      "stripeStart": "Right",
      "system": "IBJJF",
      "type": "Striped",
    },
    "borderColor": "#434244",
    "callback": undefined,
    "hasPatch": true,
    "hasProfessorPatch": false,
    "id": "",
    "patchBorder": "#434244",
    "patchColor": "#000000",
    "professorBorder": "",
    "professorPatch": "",
    "randomSettings": {
      "hasPatch": undefined,
      "hasProfessorPatch": undefined,
      "includeBelts": undefined,
      "stripeCount": undefined,
      "stripePosition": undefined,
    },
    "refreshInterval": 0,
    "s10l1Color": "#FFCC00",
    "s10l2aColor": "#FFFFFF",
    "s10l2bColor": "#FFFFFF",
    "s10l3Color": "#FFCC00",
    "s11l1Color": "#FFCC00",
    "s11l2aColor": "#FFFFFF",
    "s11l2bColor": "#FFFFFF",
    "s11l3Color": "#FFCC00",
    "s12l1Color": "#FFCC00",
    "s12l2aColor": "#FFFFFF",
    "s12l2bColor": "#FFFFFF",
    "s12l3Color": "#FFCC00",
    "s13l1Color": "#FFCC00",
    "s13l2aColor": "#FFFFFF",
    "s13l2bColor": "#FFFFFF",
    "s13l3Color": "#FFCC00",
    "s1l1Color": "#FFCC00",
    "s1l2aColor": "#FFFFFF",
    "s1l2bColor": "#FFFFFF",
    "s1l3Color": "#FFCC00",
    "s2l1Color": "#FFCC00",
    "s2l2aColor": "#FFFFFF",
    "s2l2bColor": "#FFFFFF",
    "s2l3Color": "#FFCC00",
    "s3l1Color": "#FFCC00",
    "s3l2aColor": "#FFFFFF",
    "s3l2bColor": "#FFFFFF",
    "s3l3Color": "#FFCC00",
    "s4l1Color": "#FFCC00",
    "s4l2aColor": "#FFFFFF",
    "s4l2bColor": "#FFFFFF",
    "s4l3Color": "#FFCC00",
    "s5l1Color": "#FFCC00",
    "s5l2aColor": "#FFFFFF",
    "s5l2bColor": "#FFFFFF",
    "s5l3Color": "#FFCC00",
    "s6l1Color": "#FFCC00",
    "s6l2aColor": "#FFFFFF",
    "s6l2bColor": "#FFFFFF",
    "s6l3Color": "#FFCC00",
    "s7l1Color": "#FFCC00",
    "s7l2aColor": "#FFFFFF",
    "s7l2bColor": "#FFFFFF",
    "s7l3Color": "#FFCC00",
    "s8l1Color": "#FFCC00",
    "s8l2aColor": "#FFFFFF",
    "s8l2bColor": "#FFFFFF",
    "s8l3Color": "#FFCC00",
    "s9l1Color": "#FFCC00",
    "s9l2aColor": "#FFFFFF",
    "s9l2bColor": "#FFFFFF",
    "s9l3Color": "#FFCC00",
    "stripeColor1": "#FFFFFF",
    "stripeColor10": "#FFFFFF",
    "stripeColor2": "#FFFFFF",
    "stripeColor3": "#FFFFFF",
    "stripeColor4": "#FFFFFF",
    "stripeColor5": "#FFFFFF",
    "stripeColor6": "#FFFFFF",
    "stripeColor7": "#FFFFFF",
    "stripeColor8": "#FFFFFF",
    "stripeColor9": "#FFFFFF",
    "stripeCount": 0,
    "stripePosition": "Right",
    "transitionCSS": "",
    "version": "",
  },
]
`;
